WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
242753
[iOS 16] Web content process sometimes crashes under WebPage::preemptivelySendAutocorrectionContext()
https://bugs.webkit.org/show_bug.cgi?id=242753
Summary
[iOS 16] Web content process sometimes crashes under WebPage::preemptivelySen...
Wenson Hsieh
Reported
2022-07-14 09:48:37 PDT
rdar://94622926
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2022-07-14 10:07:53 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/2413
EWS
Comment 2
2022-07-14 17:00:40 PDT
Committed
252481@main
(99b2ade90b00): <
https://commits.webkit.org/252481@main
> Reviewed commits have been landed. Closing PR #2413 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug